<resources>
    <string name="app_name" translatable="false">MyMedicate</string>
    <string name="month_prompt">الشهر</string>
    <string name="day_prompt">اليوم</string>
    <string name="country_prompt">الدولة</string>
    <string name="city_prompt">المدينة</string>
    <string-array name="month_arrays">
        <item>يناير</item>
        <item>فبراير</item>
        <item>مارس</item>
        <item>أبريل</item>
        <item>مايو</item>
        <item>يونيو</item>
        <item>يوليو</item>
        <item>اغسطس</item>
        <item>سبتمبر</item>
        <item>أكتوبر</item>
        <item>نوفمبر</item>
        <item>ديسمبر</item>
    </string-array>
    <string name="fcm_token">FCM Token: %s</string>
    <string-array name="day_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string name="pro_type">ما نوع المشكلة التي تواجهك</string>
    <string-array name="pro_type_main">
        <item>نوع المشكلة</item>
        <item>مشكلة في عملية طلب بطاقة</item>
        <item>مشكلة في المطالبات</item>
        <item>التبيلغ عن مصحة أو صيدلية مخالفة</item>
        <item>أخرى</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_login_username">رقم البطاقة</string>
    <string name="hint_login_password">كلمة المرور</string>
    <string name="login">تسجيل الدخول</string>
    <string name="Hello">مرحبا بك</string>
    <string name="how_can_we_help_you">كيف يمكننا مساعدتك</string>
    <string name="claims">المطالبات</string>
    <string name="login_phone">الرجاء إدخال رقم هاتفك الشخصي</string>
    <string name="deels">العروض</string>
    <string name="Notification">الإشعارات</string>
    <string name="Providers_Network">شبكة مزودي الخدمة</string>
    <string name="More">المزيد</string>
    <string name="my_account">حسابي</string>
    <string name="cheack_int_con">خطأ في الشبكة , الرجاء التأكد من أتصالك بالأنترنت</string>
    <string name="request_e_card">طلب بطاقة</string>
    <string name="main_ui">الواجهة الرئيسية</string>
    <string name="show_card_info">معلومات البطاقة</string>
    <string name="user_info">معلومات المستفيد</string>
    <string name="card_requst">طلب بطاقة</string>
    <string name="rep_feedback">التبليغ عن مشكلة</string>
    <string name="about">حول</string>
    <string name="shere">مشاركة</string>
    <string name="next">أستمرار</string>
    <string name="search">البحث</string>
    <string name="Loading">جاري التحميل</string>
    <string name="f_name">الاسم</string>
    <string name="s_name">اسم الاب</string>
    <string name="t_name">اسم الجد</string>
    <string name="n_name">اللقب</string>
    <string name="d_o_p">تاريخ الميلاد</string>
    <string name="cYear">السنة</string>
    <string name="nat_SS">الرقم الوطني</string>
    <string name="women">أنثى</string>
    <string name="men">ذكر</string>
    <string name="Address">العنوان</string>
    <string name="e_mail">البريد الالكتروني</string>
    <string name="phone_num">رقم الهاتف</string>
    <string name="cancel">إلغاء الأمر</string>
    <string name="pass_or_name_error">خطأ في رقم البطاقة أو كلمة المرور</string>
    <string name="login_suc">تم تسجيل الدخول بنجاح</string>
    <string name="card_type">نوع البطاقة</string>
    <string name="mad_insh">بطاقة تأمين</string>
    <string name="mad_fam">MyMedicate</string>
    <string name="mad_school">Medicate School</string>
    <string name="title_activity_temp">temp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">الإعدادات</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="start">البدء</string>
    <string name="inter_all_data">الرجاء تعبئة جميع البيانات</string>
    <string name="ch_balance">كشف حساب</string>
    <string name="balance">الأستعلام عن الرصيد</string>
    <string name="lan">تغيير اللغة</string>
    <string name="alert">التنبيهات</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="skip">تخطي</string>
    <string name="ent_valied_code">أدخل رمز التحقق</string>
    <string name="v_code_sent">تم إرسال رمز التحقق إليك</string>
    <string name="hospital">المصحات</string>
    <string name="c_c_c">مراكز العلاج الطبيعي والجيم</string>
    <string name="laps">المختبرات ومراكز التشخيص</string>
    <string name="amb">سيارة إسعاف</string>
    <string name="home_h_c">الرعاية الصحية المنزلية</string>
    <string name="phar">الصيدليات</string>
    <string name="ser_type">نوع الخدمة</string>
    <string name="con_libya">ليبيا</string>
    <string name="con_egy">مصر</string>
    <string name="con_tu">تونس</string>
    <string name="con_j">الجزائر</string>
    <string name="you_need_t_inter_num">يجب عليك إدخال رقم هاتفك للمتابعة</string>
    <string name="egy">مصر</string>
    <string name="con_espany">أسبانيا</string>
    <string name="con_germany">ألمانيا</string>
    <string name="con_italy">إيطاليا</string>
    <string name="ukran">أوكرانيا</string>
    <string name="con_turkia">تركيا</string>
    <string name="qr_code">QR كود</string>
    <string name="me_card">البطاقة</string>
    <string name="ser_doctorBook">إحجز موعد كشف طبيب</string>
    <string name="ser_sergion">إحجز موعد خدمة أو عملية</string>
    <string name="ser_order_mid">أطلب أدوية</string>
    <string name="ser_doc_tohome">إحجز موعد لزيارة منزلية مع طبيب</string>
    <string name="contect_us">التواصل معنا</string>
    <string name="not_av_yet">عذراً , هذه الخدمة ليست متوفرة حالياً</string>
    <string name="our_ser">خدماتنا</string>
    <string name="ask_doc">إسأل طبيب</string>
    <string name="min_chat">محادثة فورية</string>
    <string name="chose_contry">أختر الدولة</string>
    <string name="subject">الموضوع</string>
    <string name="email_text">محتوى الرسالة</string>
    <string name="add_file">إضافة صورة</string>
    <string name="send">إرسال</string>
    <string name="or">--------------- أو ---------------</string>
    <string name="chat_call">أتصال</string>
    <string name="whatsapp">واتساب</string>
    <string name="viber">فايبر</string>
    <string name="app_photo_done">تم إضافة صورة</string>
    <string name="error_add_phto">لم يتم أخيار الصورة بنجاح</string>
    <string name="booking_min">حجز مواعيد</string>
    <string name="doc_by_name">البحث باسم الطبيب</string>
    <string name="doc_by_loc">البحث حسب التخصص والمنطقة</string>
    <string name="no_internet_con">الرجاء التأكد من أتصالك بالأنترنت</string>
    <string name="try_agin">إعادة المحاولة</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="aggree">يجب الموافقة على الاذونات للمتابعة</string>
    <string name="Providers_Network_2">الشبكة الطبية</string>
    <string name="plz_sho_lo_type">الرجاء أختيار نوع البطاقة</string>
    <string name="search_doc">البحث بأسم الطبيب</string>
    <string name="noDocWithThisName">عذراً لا يوجد طبيب بهذا الأسم</string>
    <string name="doc_sp">البحث في التخصصات</string>
    <string name="sp_1">اسنان</string>
    <string name="sp_2">العيون</string>
    <string name="sp_3">جلدية</string>
    <string name="sp_4">جراحية تجميلية</string>
    <string name="sp_5">جراحة عامة</string>
    <string name="sp_6">عظام</string>
    <string name="sp_7">مخ وأعصاب</string>
    <string name="sp_8">نساء وتوليد</string>
    <string name="sp_9">انف وأذن وحنجرة</string>
    <string name="sp_10">علاج طبيعي</string>
    <string name="sp_11">أطفال وحديثي الولادة</string>
    <string name="sp_12">نطق وتخاطب</string>
    <string name="sp_13">سمعيات</string>
    <string name="sp_14">ذكورة وعقم</string>
    <string name="sp_15">طب نفسي</string>
    <string name="sp_16">قلب وأوعية دموية</string>
    <string name="sp_17">اورام</string>
    <string name="sp_18">باطنة</string>
    <string name="sp_20">امراض الدم</string>
    <string name="sp_21">تخسيس وتغذية</string>
    <string name="sp_22">جراحة اطفال</string>
    <string name="sp_23">جراحة اورام</string>
    <string name="sp_24">جراحة اوعية دموية</string>
    <string name="sp_26">جراحة سمنة ومناظير</string>
    <string name="sp_27">جراحة عمود الفقري</string>
    <string name="sp_28">جراحة قلب وصدر</string>
    <string name="sp_29">جهاز هظمي ومناظير</string>
    <string name="sp_30">حساسية ومناعة</string>
    <string name="sp_31">حقن مجهري واطفال انابيب</string>
    <string name="sp_32">روماتيزم</string>
    <string name="sp_33">سكروغدد صماء</string>
    <string name="sp_34">صدر وجهاز تنفسي</string>
    <string name="sp_35">طب الأسرة</string>
    <string name="sp_36">طب المسنين</string>
    <string name="sp_37">طب تقويمي</string>
    <string name="sp_38">علاج الآلام</string>
    <string name="sp_39">علاج طبيعي واصابات ملاعب</string>
    <string name="sp_40">كبد</string>
    <string name="sp_41">كلى</string>
    <string name="sp_42">مراكز أشعة</string>
    <string name="sp_43"> زراعة الاعضاء</string>
    <string name="sp_44">معامل تحاليل</string>
    <string name="sp_45">مراكز أشعة</string>
    <string name="sp_46">أستعمال الليزر والضوء المكثف</string>
    <string name="sp_47">جراحة الشبكية</string>
    <string name="sp_48">صحة الأم والطفل</string>
    <string name="sp_49">الطب التلطيفي</string>
    <string name="sp_50">الوبائيات الحلقية</string>
    <string name="sp_51">جراحة الجلد</string>
    <string name="sp_52">طب الإدمان</string>
    <string name="sp_53">الأنفصام</string>
    <string name="sp_54">تخدير موضعي</string>
    <string name="sp_55">تخدير نساء وتوليد</string>
    <string name="sp_56">تخدير أسعاف</string>
    <string name="sp_57">الطب النووي</string>
    <string name="sp_58">أشعة الأعصاب التداخلية</string>
    <string name="sp_59">باثولوجيا الأمراض</string>
    <string name="ok">موافق</string>
    <string name="language">تغيير اللغة</string>
    <string name="rep_prp">التبيلغ عن مشكلة</string>
    <string name="arabic" translatable="false">العربية</string>
    <string name="english" translatable="false">English</string>
    <string name="franci" translatable="false">Français</string>
    <string name="pro_dis">وصف المشكلة</string>
    <string name="thani_replay">
        "شكراً لك , سيتم التواصل معك قريباً"

    </string>
    <string name="no">لا</string>
    <string name="ok_ok">نعم</string>
    <string name="plz_what_is_prp_2">الرجاء التبليغ عن أي خطأ أو مشكلة تصادفك في التطبيق</string>
    <string name="login_and_security">الأمان وتسجيل الدخول</string>
    <string name="pass_req">المطالبة بكلمة المرور عند فتح التطبيق</string>
    <string name="you_are_not_in">عذراً أنت غير مشترك في بطاقة MyMedicate</string>
    <string name="mad_air_force">جهاز الأسعاف الطائر الليبي</string>
    <string name="login_type_asr">صندوق أسر الشهداء / جنزور</string>
    <string name="login_type_mshrobat">شركة أفريقيا لتعبئة المشروبات</string>
    <string name="login_type_briga">صندوق البريقة للتأمين الصحي</string>
</resources>