<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardCornerRadius="25dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
         android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/plz_sho_lo_type" />

    <LinearLayout
        android:id="@+id/login_card_sector_lay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/card_selected_1"
            style="@style/but"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"

            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:text="@string/mad_insh"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout12" />

        <TextView
            android:id="@+id/card_selected_2"
            style="@style/but"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"

            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/apple"
            android:text="@string/mad_fam"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout12" />

        <TextView
            android:id="@+id/card_selected_3"
            style="@style/but"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"

            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:text="@string/mad_air_force"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout12" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_card_sector_lay2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/card_selected_4"
            style="@style/but"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"

            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:text="@string/login_type_mshrobat"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout12" />

        <TextView
            android:id="@+id/card_selected_5"
            style="@style/but"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:text="@string/login_type_asr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout12" />

        <TextView
            android:id="@+id/card_selected_6"
            style="@style/but"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"

            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:text="@string/mad_air_force"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout12" />

        <TextView
            android:id="@+id/card_selected_7"
            style="@style/but"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"

            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:text="@string/login_type_briga"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout12" />
    </LinearLayout>
</LinearLayout>
</androidx.cardview.widget.CardView>