<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main_screen.settings.ChangeLanguage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/language"
            android:textColor="@color/main"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19">

            <TextView
                android:id="@+id/set_lan_arabic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:paddingTop="3dp"
                android:paddingBottom="8dp"
                android:text="@string/arabic"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <View
                android:id="@+id/view11"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/set_lan_english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:paddingTop="12dp"
                android:paddingBottom="8dp"
                android:text="@string/english"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <View
                android:id="@+id/view12"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/set_lan_franci"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:paddingTop="12dp"
                android:paddingBottom="3dp"
                android:text="@string/franci"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/set_lan_ok"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/ok"
            android:textColor="@color/white"

            android:background="@drawable/but_s"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>