<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageView62"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:src="@drawable/cards" />

        <TextView
            android:id="@+id/textView97"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/you_are_not_in"
            android:textColor="@color/main"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView98"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/but_s"
            android:gravity="center"
            android:text="@string/card_requst"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView100"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/spinner_city_background"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>