<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/feed_back_thank"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/gifImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/done"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.35000002" />

            <TextView
                android:id="@+id/chat_medicate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/thani_replay"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gifImageView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/feed_back_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/rep_prp"
                android:textColor="@color/main"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/prp_phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/bast_exit_text"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/phone_num"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prp_spinner" />

            <EditText
                android:id="@+id/report_back_txt"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/bast_exit_text"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/pro_dis"
                android:inputType="textMultiLine"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:textColorHint="@color/true_gray"
                app:layout_constraintBottom_toTopOf="@+id/feed_back_ok_byt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prp_phone" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:gravity="center"
                android:text="@string/plz_what_is_prp_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView31" />

            <Button
                android:id="@+id/feed_back_ok_byt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/prp_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/bast_exit_text"
                android:elevation="2dp"
                android:entries="@array/pro_type"
                android:padding="5dp"
                android:textAlignment="center"
                android:popupBackground="@drawable/spinner_city_background"
                android:prompt="@string/pro_type"
                android:spinnerMode="dropdown"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView32" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
